deploy/gitops/envoy-gateway/openbao-vpn-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbao-vpn-proxy
  namespace: envoy-gateway-system
  labels:
    app.kubernetes.io/part-of: openbao-vpn
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy
    gateway.envoyproxy.io/owning-gateway-name: openbao-vpn
    gateway.envoyproxy.io/owning-gateway-namespace: openbao
  ports:
    - name: http-18083
      port: 18083
      targetPort: 18083
      protocol: TCP
